New in spot 2.11.1.dev  (not yet released)

  Bugs fixed:

  - Fix pkg-config files containing @LIBSPOT_PTHREAD@ (issue #520)

New in spot 2.11.1  (2022-10-10)

  Bugs fixed:

  - Fix a build issue preventing the update of website (issue #516).
  - Fix a compilation error with clang-14 on FreeBSD (issue #515).

New in spot 2.11  (2022-10-08)

  Build:

  - configure will now diagnose situations where Python bindings will
    be installed in a directory that is not part of Python's search
    path.  A new configure option --with-pythondir can be used to
    modify this installation path.

  - A new configure option --enable-pthread enables the compilation of
    Spot with -pthread, and render available the parallel version of
    some algorithms.  If Spot is compiled with -pthread enabled, any
    user linking with Spot should also link with the pthread library.
    In order to not break existing build setups using Spot, this
    option is currently disabled by default in this release.  We plan
    to turn it on by default in some future release.  Third-party
    project using Spot may want to start linking with -pthread in
    prevision for this change.

  Command-line tools:

  - autfilt has a new options --aliases=drop|keep to specify
    if the HOA printer should attempt to preserve aliases
    present in the HOA input.  This defaults to "keep".

  - autfilt has a new --to-finite option, illustrated on
    https://spot.lrde.epita.fr/tut12.html

  - ltlfilt has a new --sonf option to produce a formula's Suffix
    Operator Normal Form, described in [cimatti.06.fmcad].  The
    associated option --sonf-aps allows listing the newly introduced
    atomic propositions.

  - autcross learned a --language-complemented option to assist in the
    case one is testing tools that complement automata.  (issue #504).

  - ltlsynt has a new option --tlsf that takes the filename of a TLSF
    specification and calls syfco (which must be installed) to convert