@@ -3,6 +3,9 @@ New in spot 2.11.1.dev  (not yet released)
   Bugs fixed:
 
   - Fix pkg-config files containing @LIBSPOT_PTHREAD@ (issue #520)
+  - spot::relabel_bse() was incorrectly relabeling some dependent
+    Boolean subexpressions in SERE.  (Note that this had no
+    consequence on automata translated from those SERE.)
 
 New in spot 2.11.1  (2022-10-10)
 
